# mornin-cli

./: Decision.md  README.md  pyproject.toml
mornin/: cli.py  config.py  git.py  setup.py  summarize.py
src/: cli.py  commit_processing.py
