[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mornin"
version = "0.1.0"
description = "Morning standup CLI — summarize your git activity with a local LLM"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/rahilmehta-dev/mornin-cli"
Repository = "https://github.com/rahilmehta-dev/mornin-cli"

[project.scripts]
mornin = "mornin.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["mornin"]
